4939-app - Configure c3p0's max db connection pool size
report-service: 1 - 15
metasfresh-material-dispo-service: 1 - 5
de.metas.printing.rest-api-impl: 1 - 5

https://github.com/metasfresh/metasfresh/issues/4939